@@ -54,6 +54,7 @@ int im__readhist( IMAGE *image );
 int im__write_extension_block( IMAGE *im, void *buf, int size );
 int im__writehist( IMAGE *image );
 int im__handle_eval( IMAGE *im, int w, int h );
+int im__time_destroy( IMAGE *im );
 
 extern int im__read_test;
 extern int im__mmap_limit;
