@@ -1,5 +1,9 @@
 31/10/07 started 7.13.2
 - build cimg on windows fixes
+- various include cleanups, updated man pages
+- break im_wbuffer() out to a separate API
+- use im_wbuffer() to make im_vips2jpeg() compress in the background
+- also im_vips2png()
 
 28/9/07 started 7.13.1
 - vips2dj can print RGB images
